--- a/peac_dev/force-app/main/default/lwc/tvalueQuotePicker/tvalueQuotePicker.html
+++ b/peac_dev/force-app/main/default/lwc/tvalueQuotePicker/tvalueQuotePicker.html
@@ -8,15 +8,13 @@
             <div class="header-buttons">
                 <button 
                     class="slds-button slds-button_neutral"
-                    onclick={handleEmailQuotes}
-                    disabled={notHasSelection}>
+                    onclick={handleEmailQuotes}>
                     <lightning-icon icon-name="utility:email" size="small"></lightning-icon>
                     {label.EMAIL_QUOTES_LABEL}
                 </button>
                 <button 
                     class="slds-button slds-button_brand"
-                    onclick={handleUseThisQuote}
-                    disabled={notHasSelection}>
+                    onclick={handleUseThisQuote}>
                     <lightning-icon icon-name="utility:check" size="small"></lightning-icon>
                     {label.USE_THIS_QUOTE_LABEL}
                 </button>
@@ -67,15 +65,13 @@
             <!-- <div class="footer-section">
                 <button 
                     class="slds-button slds-button_neutral"
-                    onclick={handleEmailQuotes}
-                    disabled={notHasSelection}>
+                    onclick={handleEmailQuotes}>
                     <lightning-icon icon-name="utility:email" size="small"></lightning-icon>
                     {label.EMAIL_QUOTES_LABEL}
                 </button>
                 <button 
                     class="slds-button slds-button_brand"
-                    onclick={handleUseThisQuote}
-                    disabled={notHasSelection}>
+                    onclick={handleUseThisQuote}>
                     <lightning-icon icon-name="utility:check" size="small"></lightning-icon>
                     {label.USE_THIS_QUOTE_LABEL}
                 </button>
