created email modal

--- a/peac_dev/force-app/main/default/lwc/tvalueQuotePicker/tvalueQuotePicker.html
+++ b/peac_dev/force-app/main/default/lwc/tvalueQuotePicker/tvalueQuotePicker.html
@@ -92,4 +92,11 @@
             </div>
         </template>
     </div>
+
+    <template if:true={isEmailModalOpen}>
+        <c-tvalue-quote-email
+            selected-quotes={selectedQuoteRecords}
+            onclose={handleCloseEmailModal}>
+        </c-tvalue-quote-email>
+    </template>
 </template>
